--- a/src/components/journeys/Places.css
+++ b/src/components/journeys/Places.css
@@ -44,34 +44,38 @@
 }
 
 /* Places.css */
-.block.second-block {
-    position: relative;
+.block .second-block {
     padding: 20px;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-    position: absolute;
+.swiper-buttons {
+    width: 100%;
     top: 50%;
-    transform: translateY(-50%);
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
     z-index: 10;
+}
+
+.swiper-button {
+    color: #fff;
+    border-width: 1px;
+    border-color: #fff;
+    padding: 10px;
+    cursor: pointer;
     font-size: 14px;
-    border-radius: 4px;
+    border-radius: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 11;
 }
 
-.swiper-button-prev:hover,
-.swiper-button-next:hover {
-    background: rgba(250, 250, 250, 0.08);
+.swiper-button:hover {
+    background-color: #460b70;
 }
 
-.swiper-button-next:after {
-    content: none;
-}
-
-.swiper-button-prev:after {
-    content: none;
+.swiper-button img {
+    width: 20px;
+    /* Adjust size as needed */
+    height: auto;
 }
