--- a/src/components/journeys/widgetstyles.css
+++ b/src/components/journeys/widgetstyles.css
@@ -26,12 +26,13 @@ body {
     overflow: hidden;
     color: #FAFAFA;
     text-overflow: ellipsis;
+    text-align: left;
     white-space: nowrap;
     font-family: "Inter";
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 40px;
 }
 
 .modal-container {
@@ -95,6 +96,7 @@ body {
     /* width: 330px; */
     padding: 10px;
     width: 267px;
+    overflow-y: scroll;
 }
 
 .big-block {
